[package]
name = "sjs"
version = "1.0.0"
edition = "2021"
authors = ["Trin Wasinger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "*"
deno_runtime = "*"
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.5.0", features = ["cargo"] }
panic-message = "0.3.0"
backtrace = "0.3.64"
velcro = "0.5.4"
home = "0.5.9"
cache_control = "=0.2.0"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
base64 = "0.21.4"
once_cell = "1.17.1"
deno_ast = { version = "0.32.0", features = ["transpiling"] }
deno_graph = "=0.64.1"
deno_cache_dir = "=0.6.1"
rand = "0.8.5"
or_panic = { git = "https://github.com/SteveBeeblebrox/or_panic.git" }

[build-dependencies]
deno_core = "*"
deno_runtime = "*"

[patch.crates-io]
deno_core = { path = "../deno_core/core" }
deno_runtime = { path = "../deno/runtime" }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = "debuginfo"
